--- a/src/main/resources/static/map.html
+++ b/src/main/resources/static/map.html
@@ -74,34 +74,34 @@
     var infowindows = {};
     var userListContainer = document.getElementById('user-list');
 
-    fetch('/api/profiles')
+    fetch('/api/map/profiles')
         .then(response => response.json())
         .then(data => {
             console.log("데이터를 가져왔습니다.", data);
 
-            data.forEach(profile => {
-                if (profile.region && profile.region.latitude && profile.region.longitude && profile.user && profile.user.name) {
-                    var position = new kakao.maps.LatLng(profile.region.latitude, profile.region.longitude);
+            data.response.forEach(profile => {
+                if (profile.regionName && profile.latitude && profile.longitude && profile.userId && profile.userName) {
+                    var position = new kakao.maps.LatLng(profile.latitude, profile.longitude);
 
                     var marker = new kakao.maps.Marker({
                         map: map,
                         position: position,
-                        title: profile.user.name
+                        title: profile.userName
                     });
 
                     // 정보 창 뜨고, 이름 클릭시 모달 창 출력 (함수실행)
                     var infowindow = new kakao.maps.InfoWindow({
                         content: `<div style="padding: 3px 5px; background-color: #fff; border-radius: 6px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); font-size: 12px; color: #333; width: 150px; height: auto; display: flex; flex-direction: column; align-items: center; text-align: center; font-family: 'Arial', sans-serif;">
-                            <a href="#" onclick="openUserModal(${profile.user.id}); return false;" style="text-decoration: none; color: #333;">
-                                <strong style="font-size: 14px; font-weight: bold;">${profile.user.name}</strong>
+                            <a href="#" onclick="openUserModal(${profile.userId}); return false;" style="text-decoration: none; color: #333;">
+                                <strong style="font-size: 14px; font-weight: bold;">${profile.userName}</strong>
                             </a>
-                            <span style="margin-top: 2px; font-size: 12px; color: #666;">${profile.region.name || '주소 정보 없음'}</span>
+                            <span style="margin-top: 2px; font-size: 12px; color: #666;">${profile.regionName || '주소 정보 없음'}</span>
                         </div>`
                     });
 
                     // 마커와 InfoWindow를 객체에 저장
-                    markers[profile.user.id] = marker;
-                    infowindows[profile.user.id] = infowindow;
+                    markers[profile.userId] = marker;
+                    infowindows[profile.userId] = infowindow;
 
                     kakao.maps.event.addListener(marker, 'click', function() {
                         if (infowindow.getMap()) {
@@ -114,7 +114,7 @@
                     // 사용자 목록 추가
                     var userItem = document.createElement('div');
                     userItem.className = 'user-item';
-                    userItem.innerHTML = `<a href="#" data-user-id="${profile.user.id}" style="text-decoration: none; color: #333;">${profile.user.name}</a>`;
+                    userItem.innerHTML = `<a href="#" data-user-id="${profile.userId}" style="text-decoration: none; color: #333;">${profile.userName}</a>`;
                     userListContainer.appendChild(userItem);
                 } else {
                     console.error('Profile 데이터가 부족합니다:', profile);
