--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -176,7 +176,7 @@
                             <label for="profileImage" class="form-label">프로필 이미지</label>
                             <input type="file" class="form-control" id="profileImage" accept="image/png, image/jpeg, image/jpg, image/gif">
                             <div class="text-center">
-                                <img id="profilePreview" src="img.png" class="img-fluid rounded mt-2" alt="프로필 이미지 미리보기" style="width: 300px; height: 300px; object-fit: cover;">
+                                <img id="profilePreview" src="img/img.png" class="img-fluid rounded mt-2" alt="프로필 이미지 미리보기" style="width: 300px; height: 300px; object-fit: cover;">
                             </div>
                         </div>
 
@@ -269,6 +269,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="/js/auth.js"></script>
 <script src="/js/navbar.js"></script>
 
 <script>
