--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -24,14 +24,43 @@
 
 <div class="container" style="margin-left: 250px; padding-top: 20px;">
     <h1>메인 페이지</h1>
-    <p>콘텐츠</p>
 
+    <!-- 호감도 차트 -->
+    <div class="col-xl-8 col-lg-7">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">수익 개요</h6>
+                <div class="dropdown no-arrow">
+                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                         aria-labelledby="dropdownMenuLink">
+                        <div class="dropdown-header">드롭다운 메뉴:</div>
+                        <a class="dropdown-item" href="#">액션</a>
+                        <a class="dropdown-item" href="#">다른 액션</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">여기서 뭔가</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">최고의 짝꿍</div>
+                <div class="h5 mb-0 font-weight-bold text-gray-800">삼다수</div>
+                <div class="chart-area">
+                    <canvas id="myAreaChart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- MBTI 차트 -->
     <div class="row">
-        <!-- 취미 차트 카드 -->
         <div class="col-xl-4 col-lg-5">
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
-                    <h6 class="m-0 font-weight-bold text-primary">취미</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">MBTI</h6>
                 </div>
                 <div class="card-body">
                     <div class="chart-container">
@@ -42,7 +71,7 @@
             </div>
         </div>
 
-        <!-- 남녀 비율 프로그레스 바 카드 -->
+        <!-- 남녀 비율 프로그레스 바 -->
         <div class="col-xl-4 col-lg-5">
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
@@ -63,29 +92,61 @@
         <div class="col-xl-4 col-lg-5">
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">전공</h6>
                 </div>
                 <div class="card-body" id="projects-card-body">
-                    <!-- Projects data will be injected here by JavaScript -->
+                    <!-- 자바스크립트로 전공 데이터 삽입 -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 사는 지역 차트 카드 -->
+    <div class="col-xl-4 col-lg-5">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
+                <h6 class="m-0 font-weight-bold text-primary">사는 지역</h6>
+            </div>
+            <div class="card-body">
+                <div class="chart-container">
+                    <canvas id="PieChart"></canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 취미 바 차트 카드 -->
+    <div class="col-xl-4 col-lg-5">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
+                <h6 class="m-0 font-weight-bold text-primary">취미</h6>
+            </div>
+            <div class="card-body">
+                <div class="progress mb-4">
+                    <canvas id="dashboardBarChart"></canvas>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/navbar.js"></script>
 <script>
-    // 취미 데이터로 차트 생성
+    // MBTI 데이터로 차트 생성
     fetch('/api/profiles')
         .then(response => response.json())
         .then(data => {
-            const hobbyData = data.map(profile => profile.hobby);
+            const hobbyData = data.map(profile => profile.mbti);
             const hobbyCounts = {};
 
-            hobbyData.forEach(hobby => {
-                if (hobby) {
-                    hobbyCounts[hobby] = (hobbyCounts[hobby] || 0) + 1;
+            hobbyData.forEach(mbti => {
+                if (mbti) {
+                    hobbyCounts[mbti] = (hobbyCounts[mbti] || 0) + 1;
                 }
             });
 
@@ -161,6 +222,247 @@
         `;
         projectsCardBody.insertAdjacentHTML('beforeend', projectHtml);
     });
+
+
+
+    <!-- Chart.js 임시 데이터 스크립트 -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+    // 차트를 렌더링할 캔버스 요소
+    var ctx = document.getElementById("myAreaChart").getContext('2d');
+
+    // 차트 데이터를 정의 (임시 데이터 사용)
+    var myAreaChart = new Chart(ctx, {
+        type: 'line', // 선형 차트 타입 설정
+        data: {
+            labels: ["January", "February", "March", "April", "May", "June"], // x축 레이블 (임시)
+            datasets: [{
+                label: "호감도", // 데이터셋 이름
+                data: [65, 59, 80, 81, 56, 55], // 임시 데이터 값
+                backgroundColor: "rgba(78, 115, 223, 0.05)", // 배경색 (투명)
+                borderColor: "rgba(78, 115, 223, 1)", // 선 색상
+                pointRadius: 3, // 데이터 포인트 크기
+                pointBackgroundColor: "rgba(78, 115, 223, 1)", // 포인트 배경색
+                pointBorderColor: "rgba(78, 115, 223, 1)", // 포인트 테두리 색
+                pointHoverRadius: 3, // 포인트 호버 크기
+                pointHoverBackgroundColor: "rgba(78, 115, 223, 1)", // 포인트 호버 배경색
+                pointHoverBorderColor: "rgba(78, 115, 223, 1)", // 포인트 호버 테두리 색
+                pointHitRadius: 10, // 클릭 가능 범위
+                pointBorderWidth: 2 // 포인트 테두리 두께
+            }]
+        },
+        options: {
+            maintainAspectRatio: false, // 차트의 비율을 유지하지 않음
+            layout: {
+                padding: {
+                    left: 10,
+                    right: 25,
+                    top: 25,
+                    bottom: 0
+                }
+            },
+            scales: {
+                x: {
+                    time: {
+                        unit: 'month' // x축 시간 단위 설정 (임시 데이터에 맞춤)
+                    },
+                    grid: {
+                        display: false, // x축 그리드 표시 안함
+                        drawBorder: false
+                    },
+                    ticks: {
+                        maxTicksLimit: 7 // x축 최대 표시 갯수 제한
+                    }
+                },
+                y: {
+                    ticks: {
+                        maxTicksLimit: 5, // y축 최대 표시 갯수 제한
+                        padding: 10,
+                        // 숫자 포맷을 사용하여 y축 값에 단위 추가
+                        callback: function(value) {
+                            return number_format(value) + '%'; // 값 뒤에 % 추가
+                        }
+                    },
+                    grid: {
+                        color: "rgb(234, 236, 244)", // 그리드 색상
+                        zeroLineColor: "rgb(234, 236, 244)", // 0선 색상
+                        drawBorder: false, // 그리드 테두리 그리지 않음
+                        borderDash: [2], // 그리드 스타일
+                        zeroLineBorderDash: [2] // 0선 스타일
+                    }
+                }
+            },
+            legend: {
+                display: false // 범례 표시 안함
+            },
+            tooltips: {
+                backgroundColor: "rgb(255,255,255)",
+                bodyFontColor: "#858796",
+                titleMarginBottom: 10,
+                titleFontColor: '#6e707e',
+                titleFontSize: 14,
+                borderColor: '#dddfeb',
+                borderWidth: 1,
+                xPadding: 15,
+                yPadding: 15,
+                displayColors: false,
+                intersect: false,
+                mode: 'index',
+                caretPadding: 10
+            }
+        }
+    });
+
+    // 숫자 포맷 함수 (필요에 따라 작성)
+    function number_format(number, decimals, dec_point, thousands_sep) {
+        // 예시: 1000 -> 1,000 형태로 포맷팅
+        number = (number + '').replace(',', '').replace(' ', '');
+        var n = !isFinite(+number) ? 0 : +number,
+            prec = !isFinite(+decimals) ? 0 : Math.abs(decimals),
+            sep = (typeof thousands_sep === 'undefined') ? ',' : thousands_sep,
+            dec = (typeof dec_point === 'undefined') ? '.' : dec_point,
+            s = '',
+            toFixedFix = function(n, prec) {
+                var k = Math.pow(10, prec);
+                return '' + Math.round(n * k) / k;
+            };
+        s = (prec ? toFixedFix(n, prec) : '' + Math.round(n)).split('.');
+        if (s[0].length > 3) {
+            s[0] = s[0].replace(/\B(?=(\d{3})+(?!\d))/g, sep);
+        }
+        if ((s[1] || '').length < prec) {
+            s[1] = s[1] || '';
+            s[1] += new Array(prec - s[1].length + 1).join('0');
+        }
+        return s.join(dec);
+    }
+
+    // MBTI 임시 데이터 생성
+    const mbtiData = {
+        "ISTJ": 15,
+        "ISFJ": 20,
+        "INFJ": 10,
+        "INTJ": 12,
+        "ISTP": 8,
+        "ISFP": 14,
+        "INFP": 18,
+        "INTP": 13
+    };
+
+    const mbtiLabels = Object.keys(mbtiData);
+    const mbtiCounts = Object.values(mbtiData);
+
+    // MBTI 도넛 차트 생성
+    const mbtiCtx = document.getElementById('myPieChart').getContext('2d');
+    new Chart(mbtiCtx, {
+        type: 'doughnut',
+        data: {
+            labels: mbtiLabels,
+            datasets: [{
+                data: mbtiCounts,
+                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#00b894', '#6c5ce7'],
+            }],
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    display: true,
+                },
+            }
+        }
+    });
+    // 전공 임시 데이터
+    const majorData = [
+        { name: "Computer Science", percent: 40 },
+        { name: "Business", percent: 25 },
+        { name: "Psychology", percent: 20 },
+        { name: "Biology", percent: 15 }
+    ];
+
+    // 전공 프로그레스 바 추가
+    const projectsCardBody = document.getElementById('projects-card-body');
+    majorData.forEach(major => {
+        const majorHtml = `
+        <h4 class="small font-weight-bold">${major.name} <span class="float-right">${major.percent}%</span></h4>
+        <div class="progress mb-4">
+            <div class="progress-bar" role="progressbar" style="width: ${major.percent}%"
+                 aria-valuenow="${major.percent}" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+    `;
+        projectsCardBody.insertAdjacentHTML('beforeend', majorHtml);
+    });
+
+
+    // 사는 지역 임시 데이터
+    const regionData = {
+        "Seoul": 30,
+        "Busan": 20,
+        "Incheon": 15,
+        "Daegu": 10,
+        "Daejeon": 12,
+        "Gwangju": 8,
+        "Jeju": 5
+    };
+
+    const regionLabels = Object.keys(regionData);
+    const regionCounts = Object.values(regionData);
+
+    // 사는 지역 원형 차트 생성
+    const regionCtx = document.getElementById('PieChart').getContext('2d');
+    new Chart(regionCtx, {
+        type: 'pie',
+        data: {
+            labels: regionLabels,
+            datasets: [{
+                data: regionCounts,
+                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#6c5ce7'],
+            }],
+        },
+        options: {
+            responsive: true,
+            plugins: {
+                legend: {
+                    display: true,
+                },
+            }
+        }
+    });
+    // 취미 데이터로 차트 생성 (임시 데이터)
+    const hobbyData = {
+        'Reading': 9,
+        'Gaming': 6,
+        'Sports': 7,
+        'Music': 8,
+        'Cooking': 5
+    };
+
+    const hobbyLabels = Object.keys(hobbyData);
+    const hobbyCounts = Object.values(hobbyData);
+
+    const hobbyCtx = document.getElementById('dashboardBarChart').getContext('2d');
+    new Chart(hobbyCtx, {
+        type: 'bar',
+        data: {
+            labels: hobbyLabels,
+            datasets: [{
+                data: hobbyCounts,
+                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e'],
+            }]
+        },
+        options: {
+            scales: {
+                y: { beginAtZero: true }
+            },
+            plugins: {
+                legend: { display: false }
+            }
+        }
+    });
+</script>
+<!-- Chart.js 임시 데이터 스크립트 -->
+
+
 </script>
 </body>
 </html>
