--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>U+ Home Page</title>
+    <title>U+ 홈 페이지</title>
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/statistics.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -88,7 +79,7 @@
             </div>
         </div>
 
-        <!-- 프로젝트 카드 -->
+        <!-- 전공 카드 -->
         <div class="col-xl-4 col-lg-5">
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
@@ -130,28 +121,17 @@
     </div>
 </div>
 
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/navbar.js"></script>
 <script>
     // MBTI 데이터로 차트 생성
-    fetch('/api/profiles')
+    fetch('/api/mbti')
         .then(response => response.json())
         .then(data => {
-            const hobbyData = data.map(profile => profile.mbti);
-            const hobbyCounts = {};
+            const mbtiCounts = data; // MBTI 카운트 데이터가 바로 반환됨
 
-            hobbyData.forEach(mbti => {
-                if (mbti) {
-                    hobbyCounts[mbti] = (hobbyCounts[mbti] || 0) + 1;
-                }
-            });
-
-            const labels = Object.keys(hobbyCounts);
-            const counts = Object.values(hobbyCounts);
+            const labels = Object.keys(mbtiCounts);
+            const counts = Object.values(mbtiCounts);
 
             const ctx = document.getElementById('myPieChart').getContext('2d');
             new Chart(ctx, {
@@ -181,10 +161,10 @@
             });
 
             const maxCount = Math.max(...counts);
-            const mostPopularHobby = labels[counts.indexOf(maxCount)];
-            document.getElementById('chart-text').textContent = `가장 인기있는 취미: ${mostPopularHobby}`;
+            const mostPopularMbti = labels[counts.indexOf(maxCount)];
+            document.getElementById('chart-text').textContent = `가장 인기 있는 MBTI: ${mostPopularMbti}`;
         })
-        .catch(error => console.error('Error fetching profile data:', error));
+        .catch(error => console.error('MBTI 데이터 가져오기 오류:', error));
 
     // 남녀 비율 데이터로 프로그레스 바 업데이트
     fetch('/api/stats/gender-ratio')
@@ -200,269 +180,70 @@
             document.getElementById('male-progress-bar').textContent = `남성 ${Math.round(malePercentage)}%`;
             document.getElementById('female-progress-bar').textContent = `여성 ${Math.round(femalePercentage)}%`;
         })
-        .catch(error => console.error('Error fetching gender ratio data:', error));
+        .catch(error => console.error('남녀 비율 데이터 가져오기 오류:', error));
 
-    // Sample data for Projects Card
-    const projectsData = [
-        { name: "Server Migration", percent: 20, color: "bg-danger" },
-        { name: "Sales Tracking", percent: 40, color: "bg-warning" },
-        { name: "Customer Database", percent: 60, color: "" },
-        { name: "Payout Details", percent: 80, color: "bg-info" },
-        { name: "Account Setup", percent: 100, color: "bg-success" }
-    ];
+    // 전공 카드 데이터 삽입
+    // 예제 데이터로 카드 내용 채우기
+    // 자바스크립트 코드 추가
 
-    const projectsCardBody = document.getElementById('projects-card-body');
-    projectsData.forEach(project => {
-        const projectHtml = `
-            <h4 class="small font-weight-bold">${project.name} <span class="float-right">${project.percent}%</span></h4>
-            <div class="progress mb-4">
-                <div class="progress-bar ${project.color}" role="progressbar" style="width: ${project.percent}%"
-                     aria-valuenow="${project.percent}" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        `;
-        projectsCardBody.insertAdjacentHTML('beforeend', projectHtml);
-    });
+    // 사는 지역 차트 데이터로 차트 생성
+    fetch('/api/region')
+        .then(response => response.json())
+        .then(data => {
+            const regionLabels = Object.keys(data);
+            const regionCounts = Object.values(data);
 
-
-
-    <!-- Chart.js 임시 데이터 스크립트 -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-    // 차트를 렌더링할 캔버스 요소
-    var ctx = document.getElementById("myAreaChart").getContext('2d');
-
-    // 차트 데이터를 정의 (임시 데이터 사용)
-    var myAreaChart = new Chart(ctx, {
-        type: 'line', // 선형 차트 타입 설정
-        data: {
-            labels: ["January", "February", "March", "April", "May", "June"], // x축 레이블 (임시)
-            datasets: [{
-                label: "호감도", // 데이터셋 이름
-                data: [65, 59, 80, 81, 56, 55], // 임시 데이터 값
-                backgroundColor: "rgba(78, 115, 223, 0.05)", // 배경색 (투명)
-                borderColor: "rgba(78, 115, 223, 1)", // 선 색상
-                pointRadius: 3, // 데이터 포인트 크기
-                pointBackgroundColor: "rgba(78, 115, 223, 1)", // 포인트 배경색
-                pointBorderColor: "rgba(78, 115, 223, 1)", // 포인트 테두리 색
-                pointHoverRadius: 3, // 포인트 호버 크기
-                pointHoverBackgroundColor: "rgba(78, 115, 223, 1)", // 포인트 호버 배경색
-                pointHoverBorderColor: "rgba(78, 115, 223, 1)", // 포인트 호버 테두리 색
-                pointHitRadius: 10, // 클릭 가능 범위
-                pointBorderWidth: 2 // 포인트 테두리 두께
-            }]
-        },
-        options: {
-            maintainAspectRatio: false, // 차트의 비율을 유지하지 않음
-            layout: {
-                padding: {
-                    left: 10,
-                    right: 25,
-                    top: 25,
-                    bottom: 0
-                }
-            },
-            scales: {
-                x: {
-                    time: {
-                        unit: 'month' // x축 시간 단위 설정 (임시 데이터에 맞춤)
-                    },
-                    grid: {
-                        display: false, // x축 그리드 표시 안함
-                        drawBorder: false
-                    },
-                    ticks: {
-                        maxTicksLimit: 7 // x축 최대 표시 갯수 제한
-                    }
+            const regionCtx = document.getElementById('PieChart').getContext('2d');
+            new Chart(regionCtx, {
+                type: 'pie',
+                data: {
+                    labels: regionLabels,
+                    datasets: [{
+                        data: regionCounts,
+                        backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#6c5ce7'],
+                    }],
                 },
-                y: {
-                    ticks: {
-                        maxTicksLimit: 5, // y축 최대 표시 갯수 제한
-                        padding: 10,
-                        // 숫자 포맷을 사용하여 y축 값에 단위 추가
-                        callback: function(value) {
-                            return number_format(value) + '%'; // 값 뒤에 % 추가
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: true,
+                        },
+                    }
+                }
+            });
+        })
+        .catch(error => console.error('사는 지역 데이터 가져오기 오류:', error));
+
+    // 취미 바 차트 데이터로 차트 생성
+    fetch('/api/hobbies')
+        .then(response => response.json())
+        .then(data => {
+            const hobbyLabels = Object.keys(data);
+            const hobbyCounts = Object.values(data);
+
+            const barCtx = document.getElementById('dashboardBarChart').getContext('2d');
+            new Chart(barCtx, {
+                type: 'bar',
+                data: {
+                    labels: hobbyLabels,
+                    datasets: [{
+                        label: '취미',
+                        data: hobbyCounts,
+                        backgroundColor: '#4e73df',
+                    }],
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        x: {
+                            beginAtZero: true
                         }
-                    },
-                    grid: {
-                        color: "rgb(234, 236, 244)", // 그리드 색상
-                        zeroLineColor: "rgb(234, 236, 244)", // 0선 색상
-                        drawBorder: false, // 그리드 테두리 그리지 않음
-                        borderDash: [2], // 그리드 스타일
-                        zeroLineBorderDash: [2] // 0선 스타일
                     }
                 }
-            },
-            legend: {
-                display: false // 범례 표시 안함
-            },
-            tooltips: {
-                backgroundColor: "rgb(255,255,255)",
-                bodyFontColor: "#858796",
-                titleMarginBottom: 10,
-                titleFontColor: '#6e707e',
-                titleFontSize: 14,
-                borderColor: '#dddfeb',
-                borderWidth: 1,
-                xPadding: 15,
-                yPadding: 15,
-                displayColors: false,
-                intersect: false,
-                mode: 'index',
-                caretPadding: 10
-            }
-        }
-    });
-
-    // 숫자 포맷 함수 (필요에 따라 작성)
-    function number_format(number, decimals, dec_point, thousands_sep) {
-        // 예시: 1000 -> 1,000 형태로 포맷팅
-        number = (number + '').replace(',', '').replace(' ', '');
-        var n = !isFinite(+number) ? 0 : +number,
-            prec = !isFinite(+decimals) ? 0 : Math.abs(decimals),
-            sep = (typeof thousands_sep === 'undefined') ? ',' : thousands_sep,
-            dec = (typeof dec_point === 'undefined') ? '.' : dec_point,
-            s = '',
-            toFixedFix = function(n, prec) {
-                var k = Math.pow(10, prec);
-                return '' + Math.round(n * k) / k;
-            };
-        s = (prec ? toFixedFix(n, prec) : '' + Math.round(n)).split('.');
-        if (s[0].length > 3) {
-            s[0] = s[0].replace(/\B(?=(\d{3})+(?!\d))/g, sep);
-        }
-        if ((s[1] || '').length < prec) {
-            s[1] = s[1] || '';
-            s[1] += new Array(prec - s[1].length + 1).join('0');
-        }
-        return s.join(dec);
-    }
-
-    // MBTI 임시 데이터 생성
-    const mbtiData = {
-        "ISTJ": 15,
-        "ISFJ": 20,
-        "INFJ": 10,
-        "INTJ": 12,
-        "ISTP": 8,
-        "ISFP": 14,
-        "INFP": 18,
-        "INTP": 13
-    };
-
-    const mbtiLabels = Object.keys(mbtiData);
-    const mbtiCounts = Object.values(mbtiData);
-
-    // MBTI 도넛 차트 생성
-    const mbtiCtx = document.getElementById('myPieChart').getContext('2d');
-    new Chart(mbtiCtx, {
-        type: 'doughnut',
-        data: {
-            labels: mbtiLabels,
-            datasets: [{
-                data: mbtiCounts,
-                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#00b894', '#6c5ce7'],
-            }],
-        },
-        options: {
-            responsive: true,
-            plugins: {
-                legend: {
-                    display: true,
-                },
-            }
-        }
-    });
-    // 전공 임시 데이터
-    const majorData = [
-        { name: "Computer Science", percent: 40 },
-        { name: "Business", percent: 25 },
-        { name: "Psychology", percent: 20 },
-        { name: "Biology", percent: 15 }
-    ];
-
-    // 전공 프로그레스 바 추가
-    const projectsCardBody = document.getElementById('projects-card-body');
-    majorData.forEach(major => {
-        const majorHtml = `
-        <h4 class="small font-weight-bold">${major.name} <span class="float-right">${major.percent}%</span></h4>
-        <div class="progress mb-4">
-            <div class="progress-bar" role="progressbar" style="width: ${major.percent}%"
-                 aria-valuenow="${major.percent}" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-    `;
-        projectsCardBody.insertAdjacentHTML('beforeend', majorHtml);
-    });
-
-
-    // 사는 지역 임시 데이터
-    const regionData = {
-        "Seoul": 30,
-        "Busan": 20,
-        "Incheon": 15,
-        "Daegu": 10,
-        "Daejeon": 12,
-        "Gwangju": 8,
-        "Jeju": 5
-    };
-
-    const regionLabels = Object.keys(regionData);
-    const regionCounts = Object.values(regionData);
-
-    // 사는 지역 원형 차트 생성
-    const regionCtx = document.getElementById('PieChart').getContext('2d');
-    new Chart(regionCtx, {
-        type: 'pie',
-        data: {
-            labels: regionLabels,
-            datasets: [{
-                data: regionCounts,
-                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e', '#f8b400', '#6c5ce7'],
-            }],
-        },
-        options: {
-            responsive: true,
-            plugins: {
-                legend: {
-                    display: true,
-                },
-            }
-        }
-    });
-    // 취미 데이터로 차트 생성 (임시 데이터)
-    const hobbyData = {
-        'Reading': 9,
-        'Gaming': 6,
-        'Sports': 7,
-        'Music': 8,
-        'Cooking': 5
-    };
-
-    const hobbyLabels = Object.keys(hobbyData);
-    const hobbyCounts = Object.values(hobbyData);
-
-    const hobbyCtx = document.getElementById('dashboardBarChart').getContext('2d');
-    new Chart(hobbyCtx, {
-        type: 'bar',
-        data: {
-            labels: hobbyLabels,
-            datasets: [{
-                data: hobbyCounts,
-                backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc', '#e74a3b', '#f6c23e'],
-            }]
-        },
-        options: {
-            scales: {
-                y: { beginAtZero: true }
-            },
-            plugins: {
-                legend: { display: false }
-            }
-        }
-    });
-</script>
-<!-- Chart.js 임시 데이터 스크립트 -->
-
-
+            });
+        })
+        .catch(error => console.error('취미 데이터 가져오기 오류:', error));
 </script>
 </body>
 </html>
